--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://faisal12212092.github.io",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
@@ -13,13 +14,14 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-  "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "both": "concurrently \"npm run start\" \"npx nodemon ../Backend/index.js\""
-}
-,
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "both": "concurrently \"npm run start\" \"npx nodemon ../Backend/index.js\""
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
