--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "chmod +x node_modules/.bin/react-scripts && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "both": "concurrently \"npm run start\" \"npx nodemon ../Backend/index.js\""
@@ -44,6 +44,6 @@
     "nodemon": "^3.1.10"
   },
   "engines": {
-  "node": "18.x"
+  "node": ">=20.0.0"
 }
 }
